--- a/index.html
+++ b/index.html
@@ -13,16 +13,30 @@
   
   <header class="header">
     
-      <a class="logo" href="">Logo</a>
+    <a href="">
+    <div class="rose-container">
+      <img src="images/golden-rose.png" alt="">
+    </div>
+    </a>
 
       <nav class="navbar">
-      <a href="home.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="gallery.html">Gallery</a>
       <a href="projects.html">Projects</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="writing.html">Writing</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
+  <div class="image-logo-container">
+    <img src="/images/left-image-portfolio-2.jpg" alt="">
+  </div>
+
+  <div class="text-container">
+    <div><p>Welcome to my Portfolio Page</p></div>
+    <div><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse a eveniet libero distinctio repudiandae quaerat voluptatem vel, tenetur voluptatibus eius tempora ullam, quasi magnam error quod laboriosam sunt sequi nemo?</p></div>
+    <div></div>
+  </div>
+  <div class="social-bar"></div>
 
 
 
