--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     
     <a href="">
     <div class="rose-container">
-      <img src="images/golden-rose.png" alt="">
+      <img src="./images/golden-rose.png" alt="">
     </div>
     </a>
 
       <nav class="navbar">
-      <a href="projects.html">Projects</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="writing.html">Writing</a>
-      <a href="contact.html">Contact</a>
+      <a href="./projects.html">Projects</a>
+      <a href="./gallery.html">Gallery</a>
+      <a href="./writing.html">Writing</a>
+      <a href="./contact.html">Contact</a>
     </nav>
   </header>
 
   <div class="image-logo-container">
-    <img src="/images/left-image-portfolio-2.jpg" alt="">
+    <img src="./images/left-image-portfolio-2.jpg" alt="">
   </div>
 
   <div class="text-container">
@@ -41,5 +41,5 @@
 
 
 </body>
-<script src="app.js"></script>
+<script src="./app.js"></script>
 </html>
